Fix dependency conflicts and improve Docker build

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,17 @@ python-dotenv==1.0.0
 Werkzeug==2.3.7
 note-seq==0.0.3
 magenta==2.1.4
-tensorflow==2.13.0
+tensorflow==2.9.1
 six==1.16.0
 matplotlib==3.5.2
 Pillow==9.2.0
 pretty-midi==0.2.9
 python-rtmidi==1.1.2
+numpy==1.23.5
+protobuf==3.19.6
+scipy==1.9.3
+pandas==1.5.3
+librosa==0.7.2
+absl-py==1.2.0
+tf-slim==1.1.0
+numba==0.49.1
