--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ gunicorn==21.2.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 note-seq==0.0.3
-magenta==2.1.4
 tensorflow==2.9.1
+tensorflow-io-gcs-filesystem==0.23.1
+keras==2.9.0
+h5py==3.1.0
 six==1.16.0
 matplotlib==3.5.2
 Pillow==9.2.0
@@ -19,3 +21,4 @@ librosa==0.7.2
 absl-py==1.2.0
 tf-slim==1.1.0
 numba==0.49.1
+magenta==2.1.4
